- Fixed bug #28038 (Sent incorrect RCPT TO commands to SMTP server)